Sec57_Chap503-XXX: additional code optimizations